--- a/index.html
+++ b/index.html
@@ -76,3 +76,21 @@
                         </tr>
     
                     </table>
+                    <div>
+                        <br>
+                        <table>
+                            <tr>
+                                <td><input type="radio" name="b"
+                                    v-on:click="sortingasn(lessons.title)">
+                                    Ascending
+                        </td>
+                               
+                            </tr>
+                            <tr>
+                                <td><input type="radio" name="b"
+                                    v-on:click="sortingdesn(lessons.title)">
+                                    Descending
+                        </td>
+                            </tr>
+                        </table>
+                    </div>
